# Developer-helper-for-telegram

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  railway.toml
.claude/: settings.local.json
migrations/: 001_init_schema.sql  002_create_users.sql  003_create_todos.sql  004_create_reminders.sql  005_create_file_jobs.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/bot/: callbacks.rs  commands.rs  handlers.rs  keyboards.rs  mod.rs  state.rs
src/converter/: mod.rs  queue.rs  service.rs  storage.rs
src/converter/processors/: image.rs  mod.rs
src/db/: migrations.rs  mod.rs  models.rs  pool.rs
src/reminder/: mod.rs  models.rs  notifier.rs  repository.rs  scheduler.rs  service.rs
src/shared/: mod.rs  telemetry.rs  types.rs  utils.rs
src/todo/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
